--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@mui/styled-engine-sc": "^6.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router": "^7.1.3",
+    "react-router-dom": "^7.1.3",
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
